2012-11-03  Andreas Schwab  <schwab@linux-m68k.org>

	* scripts/cross-test-ssh.sh (command): Use newlines to separate
	commands.  Quote $PWD.
	(blacklist_exports): Don't use remove_newlines.  Replace "declare
	-x" by "export".
	(remove_newlines): Remove.

2012-11-02  H.J. Lu  <hongjiu.lu@intel.com>

	* stdlib/Makefile (headers): Add bits/stdlib-float.h.
	* stdlib/stdlib.h (atof): Moved to ...
	* include/bits/stdlib-float.h: Here.  New file.
	* stdlib/stdlib.h: Include <bits/stdlib-float.h>.
	* stdlib/bits/stdlib-float.h: New file.
	* sysdeps/x86/Makefile (CFLAGS-.os): Compile rtld routines with
	-mno-sse -mno-mmx.
	* sysdeps/x86_64/multiarch/strcasestr-nonascii.c: Include
	<xmmintrin.h>.

2012-11-02  Joseph Myers  <joseph@codesourcery.com>

	* conform/conformtest.pl (@headers): Add fenv.h.
	* conform/data/fenv.h-data: New file.
	* include/fenv.h [_ISOMAC]: Disable all contents of file except
	include of <math/fenv.h>.

	* conform/data/complex.h-data [ISO99 || ISO11 || XOPEN2K ||
	POSIX2008]: Change condition to [!ISO && !POSIX && !XPG3 && !XPG4
	&& !UNIX98].  Enables tests for XOPEN2K8.
	* conform/data/inttypes.h-data [ISO99 || ISO11 || XOPEN2K ||
	POSIX2008]: Likewise.

	* conform/data/sys/wait.h-data [XPG3 || XOPEN2K8 || POSIX2008]
	(struct rusage): Do not expect type or its members.

	[BZ #3439]
	* math/math.h (FP_NAN): Define macro to integer constant usable in
	#if and use that to give value to enum constant.
	(FP_INFINITE): Likewise.
	(FP_ZERO): Likewise.
	(FP_SUBNORMAL): Likewise.
	(FP_NORMAL): Likewise.

2012-11-02  Andreas Schwab  <schwab@linux-m68k.org>

	* iconvdata/bug-iconv8.c (do_test): Use %z for size_t arguments.
	* iconvdata/bug-iconv9.c (do_test): Use %t for ptrdiff_t
	arguments.

2012-11-02  Roland McGrath  <roland@hack.frob.com>

	* aclocal.m4 (GLIBC_AUTOCONF_VERSION): New macro.
	Check that AC_AUTOCONF_VERSION matches it and m4_fatal at
	autoconf-time if not.
	* configure.in: Remove AC_PREREQ.
